# gsd-ui

./: .gitignore  CLAUDE.md  electron-builder.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: 0.1.0-REQUIREMENTS.md
.planning/phases/01-scaffold-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-REVIEW.md
.planning/phases/02-command-execution-output-streaming/: 02-01-PLAN.md  02-01-SUMMARY.md  02-04-PLAN.md  02-05-PLAN.md  02-06-PLAN.md  02-REVIEW-FIX.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dist-electron/: main.js  preload.js
electron/: main.ts  preload.ts
electron/ipc/: handlers.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  BrowserPreviewPage.tsx  DirectoryPicker.tsx  NavItem.tsx  Sidebar.tsx  WelcomeLayout.tsx  WelcomePage.tsx
src/lib/: electronAPI.ts  electronStore.ts  errorHandler.ts  fs.ts  gsd-tools.ts  gsdCommands.ts  logger.ts  shell.ts  store.ts  watchers.ts  xtermTheme.ts
src/stores/: cliStore.ts  errorStore.ts  fileStore.ts  index.ts  progressStore.ts  projectStore.ts  uiStore.ts
src/types/: electron.d.ts  progress.ts
src/views/: DashboardView.tsx  DocumentsView.tsx  RoadmapView.tsx  TerminalView.tsx
(+89 files in other folders)
